Date pickeroverflow correction

--- a/6.Date-Picker-UI/styles.css
+++ b/6.Date-Picker-UI/styles.css
@@ -51,7 +51,7 @@ h1 {
     flex: 3;
     text-align: center;
     font-size: 1.9rem;
-    animation: shake-up 1s ease-in infinite;
+    animation: shake-up 10s ease-in infinite;
 }
 #placeholder-btn-icon {
     flex: 1;
@@ -87,9 +87,10 @@ h1 {
 }
 
 #weekdays {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 10px;
+    padding: 10px;
     
 }
 .weekday {
@@ -103,7 +104,7 @@ h1 {
 #calendar-bottom {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 10px;
+    gap: 5px;
     /*border: 1px solid;*/
     border-radius: 5px;
     margin: 5px;
@@ -128,7 +129,7 @@ h1 {
     background-color: #CE6750;
 }
 #today {
-    animation: up-and-down 1s linear infinite;
+    animation: up-and-down 10s linear infinite;
     background: radial-gradient(
         circle at top right,
         yellow,
@@ -153,6 +154,7 @@ h1 {
 @keyframes up-and-down {
     0%, 50%, 100% {
         transform: translateY(0);
+        z-index: 1000;
     }
     25% {
         transform: translateY(-25%) scale(1.5);
